--- a/FocusTape/Views/Base.lproj/Main.storyboard
+++ b/FocusTape/Views/Base.lproj/Main.storyboard
@@ -12,7 +12,6 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FocusTape" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
@@ -49,7 +48,10 @@
                                                 <rect key="frame" x="8" y="718" width="398" height="100"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uim-uH-jqU">
-                                                        <rect key="frame" x="167" y="8" width="64" height="39"/>
+                                                        <rect key="frame" x="149" y="8" width="100" height="39"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="100" id="6xu-gA-m48"/>
+                                                        </constraints>
                                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="23"/>
                                                         <state key="normal" title="MUTE">
                                                             <color key="titleColor" red="0.99215686270000003" green="0.82745098039999998" blue="0.41176470590000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -112,6 +114,7 @@
                         <outlet property="muteButton" destination="Uim-uH-jqU" id="v0a-t4-cOK"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="121.73913043478262" y="125.89285714285714"/>
         </scene>
