--- a/FocusTape/Views/Base.lproj/Main.storyboard
+++ b/FocusTape/Views/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oeC-Lb-SiM" userLabel="Safe View">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="pYm-hb-lnP" userLabel="Main Stack View">
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="pYm-hb-lnP" userLabel="Main Stack View">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="focustape" translatesAutoresizingMaskIntoConstraints="NO" id="egt-OY-zWG" userLabel="FOCUSTAPE">
@@ -30,7 +30,7 @@
                                                 </constraints>
                                             </imageView>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Nty-9x-TXd">
-                                                <rect key="frame" x="8" y="70" width="398" height="648"/>
+                                                <rect key="frame" x="8" y="80" width="398" height="628"/>
                                                 <color key="backgroundColor" red="0.090194381769999998" green="0.090195201340000003" blue="0.090197287500000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="O1c-iO-hWn">
                                                     <size key="itemSize" width="128" height="128"/>
